--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@
   font-family: Georgia;
 }
 .content h1{
-  font-size:70px;
+  font-size:50px;
   color:white;
 }
 .content p{
-  font-size: 30px;
+  font-size: 20px;
   color:white;
   
 }
@@ -81,6 +81,8 @@ body{
 }
 video{
 border: 4px solid rgba(54,136,156,1);
+  width: 100vh;
+height: 100vh;
 }
 img{
   margin-left: auto;
