--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,10 @@ body{
 }
 video{
 border: 4px solid rgba(54,136,156,1);
+   max-width:400px;
+  width: 100%;
+  height: auto;
+
 }
 img{
   margin-left: auto;
