--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,9 @@ img{
   margin-left: auto;
   margin-right: auto;
   border: 4px solid rgba(54,136,156,1);
-  width: 35%;
-  height: 35%;
+  max-widt:400px;
+  width: 100%;
+  height: auto;
   margin-top:20px;
 }
 button{
