--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ img{
   margin-left: auto;
   margin-right: auto;
   border: 4px solid rgba(54,136,156,1);
-  max-widt:400px;
+  max-width: 400px;
   width: 100%;
   height: auto;
   margin-top:20px;
