--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ padding: 15px;
 ul.ull{
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 20px 0 20px;
   overflow: hidden;
   background-color: rgba(54,138,156,1);
   position: fixed;
@@ -86,8 +86,7 @@ border: 4px solid rgba(54,136,156,1);
 
 }
 img{
-  margin-left: auto;
-  margin-right: auto;
+  
   border: 4px solid rgba(54,136,156,1);
   max-width: 200px;
   width: 100%;
