--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,12 @@ padding: 15px;
 ul.ull{
   list-style-type: none;
   margin: 0;
-  
+  Padding: 0;
   overflow: hidden;
   background-color: rgba(54,138,156,1);
   position: fixed;
   width: 100%;
-  margin-top: 0;
+ 
 }
 li.l{
   float: left;
