--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ li.l a{
   text-align:center;
   padding: 16px;
   text-decoration: none;
-  margin:auto ;
+  margin: 10px;
   font-size: 20px;
 }
 li.l a:hover{
